[package]
name = "claude-rs"
version = "0.1.0"
edition = "2021"
authors = ["Dat Nguyen <dat.nguyen@bitbytelab.io>"]
license = "MIT"
repository = "https://github.com/bitbytelabio/claude-rs"
readme = "README.md"
description = "Claude AI-API ( Unofficial ) written in Rust"

[lib]
name = "claude"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.22", features = [
    "json",
    "rustls-tls-webpki-roots",
    "cookies",
    "gzip",
] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = "0.3.17"
tokio = { version = "1.33.0", features = ["full"] }
